--- a/requirements.txt
+++ b/requirements.txt
@@ -25,7 +25,7 @@ pickleshare==0.7.5
 prompt-toolkit==3.0.16
 Pygments==2.8.0
 python-dateutil==2.8.1
-pywin32==300
+pywin32
 pyzmq==22.0.3
 six==1.15.0
 SQLAlchemy==1.4.18
